New projects page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Terran</title>
+	<title>itemic.github.io!</title>
 	<link href="static/style.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
 </head>
@@ -16,11 +16,12 @@
 			<!-- <div class="subtitle-header">Fourth year software engineering student, University of Auckland</div> -->
 			<h2 id="whoami" class="run">And you've found my website!</h2>
 			<p class="link"><a style="color: #0061A2" href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a> | <a style="color: #767676 "href="https://github.com/itemic">GitHub</a> | <a style="color: #178DEF" href="https://www.twitter.com/itemic">Twitter</a> | <a class="ig" href="https://www.instagram.com/ekisigns">Instagram</a></p>
-			
-			<p class="link"><a style="color: #00aba5" href="projects.html">My Projects</a></p>
+
+			<p class="link">Take a look at my <a style="color: #00aba5" href="projects.html">projects</a>.</p>
+			<p class="link">The <a style="color: #00aba5" href="playground.html">playground</a> is where I test out new things.</p>
 
 			<div class="construction bg-dark">
-			<span class="vibrant">🚧 Still under construction, but feel free to look around. Last updated Jan 17, 2019. 🚧</span>
+			<span class="vibrant">🚧 Still under construction, but feel free to look around. Last updated Jan 18, 2019. 🚧</span>
 		</div>
 
 		</div>
@@ -45,6 +46,7 @@
 			<h4>Intern, <a href="http://www.kas.tw" style="color: #DE1417">Kaohsiung American School</a> (Nov 2016-Feb 2017)</h4>
 			<p><span class="vibrant">I redesigned the digital signage system used around campus.</span> The system I designed is now on all the displays around campus, and allows greater flexibility in what can be displayed. The code for it has been made public and can be found <a class="bg" href="http://github.com/itemic/status-kas">here</a>.</p>
 		</div>
+
 
 	</body>
 	</html>
