--- a/projects.html
+++ b/projects.html
@@ -11,32 +11,52 @@
 	<div id="container">
 		
 		<div class="main-content bg-bright">
-			<div class="vibrant"><a href="index.html" class="pill-back">◄ HOME</a></div>
+			<div class="vibrant"><a href="index.html" class="pill-back">◄ Home</a></div>
 			<h1>Projects</h1><br>
 			<h2>Here's a small selection of some projects I worked on in the past.</h2>
-			<div class="projects-scroll">Scroll up to view</div>
+			<div class="projects-scroll">Scroll to view</div>
 
 
 		</div>
 
 		<div class="content bg-green">
-			<h4>Course Notes (∞)</h4><i>Technologies used: LaTeX</i>
-			<p><span class="vibrant">I study by making study guides.</span> Usually I don't read them after I make them, so why not share them with others so that others can (hopefully) benefit from them? <a href="https://github.com/itemic/notes-cs702" style="color: #20222B">COMPSCI 702</a></p>
+			<div class="grid-container">
+			<div class="grid-item">
+				<span>
+					<h2>Squidly (2018)</h2>
+					<i>Technologies used: C#, UWP</i>
+					<p><span class="vibrant">Game prototyping tool for the Surface Hub.</span> Squidly is a UWP app that allows game designers to prototype games with animations.</p>
+				</span>
+			</div>
 
-			<h4>Rotacsufbo (2018)</h4><i>Technologies used: Java, JavaParser</i>
+			<div class="grid-item">
+			<span>
+			<h2>Course Notes</h2><i>Technologies used: LaTeX</i>
+			<p><span class="vibrant">I study by making study guides.</span> Usually I don't read them after I make them, so why not share them with others so that others can (hopefully) benefit from them? | <a href="https://github.com/itemic/notes-cs702" class="vibrant" style="color: black">COMPSCI 702</a></p></span>
+			</div>
+			<div class="grid-item">
+				<span>
+			<h2>Rotacsufbo (2018)</h2><i>Technologies used: Java, JavaParser</i>
 			<p><span class="vibrant">Java obfuscation tool.</span> Performs several different ways to obfuscate Java code, for COMPSCI 702. While the challenge phase is still active, I won't say anything more about it.</p>
-
-			<h4>Bad Manor (2017)</h4><i>Technologies used: C#, Unity</i>
+		</span>
+			</div>
+			<div class="grid-item">
+				<span>
+					<h2>Bad Manor (2017)</h2><i>Technologies used: C#, Unity</i>
 			<p><span class="vibrant">A critical-thinking adventure mystery developed in Unity in a (fantastic) group of 8.</span> This project was part of the "game development" half of SOFTENG 306. </p>
-
-			<h4>Revilo Task Scheduler (2017)</h4><i>Technologies used: Java, JavaFX, ParaTask</i>
-			<p><span class="vibrant">Java task scheduling app with an outstanding GUI.</span> Revilo produces an optimal schedule given a directed acyclic graph of tasks. This was done in a(n outstanding) team of 5 for the first half of SOFTENG 306. </p>
-
-			<h4>VOXSpell (2016)</h4><i>Technologies used: Java, JavaFX</i>
-			<p><span class="vibrant">Spelling practice application designed in Java with the Festival TTS library.</span> This project is the main deliverable for SOFTENG 206, and was runner-up in the VOXSpell class competition out of 8 finalists. </p>
+				</span>
+			</div>
+			<div class="grid-item"><span><h2>Revilo Task Scheduler (2017)</h2><i>Technologies used: Java, JavaFX, ParaTask</i>
+			<p><span class="vibrant">Java task scheduling app with an outstanding GUI.</span> Revilo produces an optimal schedule given a directed acyclic graph of tasks. This was done in a(n outstanding) team of 5 for the first half of SOFTENG 306. </p></span></div>
+			<div class="grid-item"><span><h2>VOXSpell (2016)</h2><i>Technologies used: Java, JavaFX</i>
+			<p><span class="vibrant">Spelling practice application designed in Java with the Festival TTS library.</span> This project is the main deliverable for SOFTENG 206, and was runner-up in the VOXSpell class competition out of 8 finalists. </p></span>
+			</div>
 		</div>
 
+			
+		</div>
 
+		
 
 
 	</body>
