--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p class="link">The <a style="color: #00aba5" href="playground.html">playground</a> is where I test out new things.</p>
 
 			<div class="construction bg-dark">
-			<span class="vibrant">🚧 Still under construction, but feel free to look around. Last updated Jan 18, 2019. 🚧</span>
+			<span class="vibrant">🚧 Still under construction, but feel free to look around. Last updated Jun 5, 2019. 🚧</span>
 		</div>
 
 		</div>
@@ -29,13 +29,14 @@
 		<div class="content bg-light">
 			<h2>Education</h2>
 			<h4>University of Auckland (2015-2018)</h4>
-			<p><span class="vibrant">I just finished my Bachelor of Engineering (Honours) degree in Software Engineering.</span> I will graduate in May 2019 (I believe with First Class Honours). In both 2016 and 2017, I was on the Dean's Honours List.</p>
+			<p><span class="vibrant">I just finished my Bachelor of Engineering (Honours) degree in Software Engineering.</span> I graduated in May 2019 (with First Class Honours). In both 2016 and 2017, I was on the Dean's Honours List.</p>
 			<p><span class="vibrant">I was the Part 4 Representative of SESA in 2018.</span> SESA is the University of Auckland's <a class="bg" href="https://www.sesa.co.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights, career evenings (Industry Night), as well as grad series talks. In 2017, I was also a general exec member.</p>
 			<p><span class="vibrant">I was also the Part 4 Software Engineering Rep.</span> The <a class="bg" href="http://www.ece.auckland.ac.nz/en/about/our-department/sscc.html">Staff-Student Consultative Committee</a> is a way for students to raise issues within the Department. We also hold department-wide events from time to time.</p>
 
 			<h2>Experience</h2>
-			<h4><a href="https://scholarscup.org" style="color: #610C10">World Scholar's Cup</a> (Nov 2018-)</h4>
-			<p><span class="vibrant"></span></p>
+			<h4>Program Coordinator, <a href="https://scholarscup.org" style="color: #610C10">World Scholar's Cup</a> (Nov 2018-)</h4>
+			<p><span class="vibrant">The World Scholar's Cup is a global charitable non-profit initiative for students of all languages and backgrounds
+			</span>, seeking to inspire in every scholar a love of learning and confidence in new skills, from debate to problem-solving. It draws over 30,000 students a year across over 70 countries.</p>
 
 			<h4>Marker, <a href="https://auckland.ac.nz" style="color: #07477D">University of Auckland</a> (Mar 2018-Nov 2018)</h4>
 			<p><span class="vibrant">I graded assignments for Computer Science and Software Engineering courses.</span> Courses include Human Computer Interaction (CS345), Quality Assurance (SE254), and Principles of Programming (CS101). I wrote additional test scripts to streamline my grading process.</p>
