--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 
 
 			
+        </div>
+        <div class="main-content bg-bright">
+
+            <span class="not-so-big">Congrats, you found my site. Things will (eventually) populate this space.
+                Things like <span class="vibrant">where</span> I work, <span class="vibrant">what</span> I studied, or
+                even <span class="vibrant">the projects</span> I've worked on. Until then, well, I'm not actually
+                too sure what to do here. 
+            </span>
+
+                
+
+
+			
 		</div>
 
 		</div>
