Added back button

--- a/puzzle/puzzle01.html
+++ b/puzzle/puzzle01.html
@@ -18,7 +18,9 @@
 		
         <div class="main-content bg-bright">
 
-            <span class="beta-smaller-header">
+            <span class="beta-smaller-header">                
+                <a href="puzzle00.html"> <  Go back </a>
+
                 <p class="vibrant">1 | My f1rst card game</p>
                 <p>There are many cards that are used to tell fortunes — tarot cards, for example. I wonder if we can use poker/playing cards to find answers too.</p>
 
